--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,10 @@ matrix:
   fast_finish: true
 
 install:
-  - travis_retry composer update $COMPOSER_OPTS
+  - travis_retry composer install --no-interaction --prefer-source $COMPOSER_OPTS
 
 script:
-  - if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then vendor/bin/phpunit; fi
-  - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then vendor/bin/phpunit --coverage-text --coverage-clover coverage.xml; fi
+  - bin/phpunit --coverage-text --coverage-clover coverage.xml
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
