--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,4 @@
 /.gitignore export-ignore
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
-/phpunit.xml export-ignore
-/humbug.json.dist export-ignore
+/phpunit.xml.dist export-ignore
