--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - travis_retry composer update $COMPOSER_OPTS
 
 script:
-  - php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  - bin/phpunit
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
