--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.php_cs
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
 /phpunit.xml.dist export-ignore
