--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "league/flysystem": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1"
+        "phpunit/phpunit": "^5.7.10"
     },
     "autoload": {
         "psr-4": {
