--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "league/flysystem": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.10",
-        "phpstan/phpstan": "^0.10.5"
+        "phpunit/phpunit": "^5.7.10"
     },
     "autoload": {
         "psr-4": {
