Added visibility when creating directories Added a namespace for the unit tests Added a test case for the new behaviour

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,11 @@
             "League\\Flysystem\\Memory\\": "src/"
         }
     },
+    "autoload-dev":  {
+        "psr-4": {
+            "League\\Flysystem\\Memory\\Tests\\": "tests/"
+        }
+    },
     "config": {
         "bin-dir": "bin"
     },
