--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": "^8.0.2",
         "ext-fileinfo": "*",
-        "league/flysystem": "^2.0.0"
+        "league/flysystem": "^2.0.0 || ^3.0.0"
     },
     "license": "MIT",
     "authors": [
